# egostack

./: .dockerignore  .gitignore  Dockerfile  config.yaml  pyproject.toml
gcp/: batch_job.py  gcs_storage.py
src/ego_hand_pipeline/: __init__.py  benchmark.py  benchmark_store.py  cli.py  clipper.py  cloud_worker.py  config.py  depth_estimator.py  downloader.py  enhanced_benchmark.py  export.py  hand_detector.py  hand_pose_estimator.py  lerobot_exporter.py  object_detector.py  pipeline.py  quality_benchmark.py  sample_renderer.py  scene_annotator.py  segmenter.py  trajectory_mapper.py  video_preprocessor.py
tests/: test_clipper.py  test_depth_estimator.py  test_downloader.py  test_enhanced_benchmark.py  test_hand_detector.py  test_pipeline_enhanced.py  test_sample_renderer.py  test_scene_annotator.py  test_trajectory_mapper.py  test_video_preprocessor.py
