[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ego-hand-pipeline"
version = "0.3.0"
description = "SOTA egocentric hand pipeline for robotics AI training data generation"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "opencv-python",
    "mediapipe",
    "torch",
    "timm",
    "numpy",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
# SOTA robotics models (install individually as needed)
hamer = ["hamer"]
sam2 = ["sam2"]
groundingdino = ["groundingdino"]
transformers = ["transformers>=4.36.0", "Pillow"]
vlm = ["transformers>=4.36.0", "Pillow", "accelerate"]
lerobot = ["pyarrow>=14.0", "lerobot"]
# GCP Cloud Batch deployment
cloud = [
    "google-cloud-storage",
    "google-cloud-batch",
]
# All enhanced pipeline dependencies
all = [
    "transformers>=4.36.0",
    "Pillow",
    "pyarrow>=14.0",
    "google-cloud-storage",
    "google-cloud-batch",
]

[project.scripts]
ego-hand-pipeline = "ego_hand_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
